poster OSM push

--- a/OSM2020_poster/02MethodsSchematics/GET_FinalVerificationData.R.ipynb
+++ b/OSM2020_poster/02MethodsSchematics/GET_FinalVerificationData.R.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,8 @@
       "\n",
       "    is_null\n",
       "\n",
-      "Loading required package: gsw\n"
+      "Loading required package: gsw\n",
+      "Loading required package: lubridate\n"
      ]
     }
    ],
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,22 +842,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Tchla    <- data.frame('Date'=PINT$Date, 'val'=PINT$Tchla,   '0-55m'=PINT$Tchla.x,   '55-100m'=PINT$Tchla.y,   'spec'='Tchla')\n",
-    "Prasino3 <- data.frame('Date'=PINT$Date, 'val'=PINT$Prasino3,'0-55m'=PINT$Prasino3.x,'55-100m'=PINT$Prasino3.y,'spec'='Prasino3')\n",
-    "Crypto1  <- data.frame('Date'=PINT$Date, 'val'=PINT$Crypto1, '0-55m'=PINT$Crypto1.x, '55-100m'=PINT$Crypto1.y, 'spec'='Crypto1')\n",
-    "Hapto6   <- data.frame('Date'=PINT$Date, 'val'=PINT$Hapto6,  '0-55m'=PINT$Hapto6.x,  '55-100m'=PINT$Hapto6.y,  'spec'='Hapto6')\n",
-    "Chloro1  <- data.frame('Date'=PINT$Date, 'val'=PINT$Chloro1, '0-55m'=PINT$Chloro1.x, '55-100m'=PINT$Chloro1.y, 'spec'='Chloro1')\n",
-    "Cyano4   <- data.frame('Date'=PINT$Date, 'val'=PINT$Cyano4,  '0-55m'=PINT$Cyano4.x,  '55-100m'=PINT$Cyano4.y,  'spec'='Cyano4')\n",
-    "Diatom1  <- data.frame('Date'=PINT$Date, 'val'=PINT$Diatom1, '0-55m'=PINT$Diatom1.x, '55-100m'=PINT$Diatom1.y, 'spec'='Diatom1')"
+    "Tchla    <- data.frame('date'=PINT$Date, 'val'=PINT$Tchla,   '0-55m'=PINT$Tchla.x,   '55-100m'=PINT$Tchla.y,   'spec'='Tchla')\n",
+    "Prasino3 <- data.frame('date'=PINT$Date, 'val'=PINT$Prasino3,'0-55m'=PINT$Prasino3.x,'55-100m'=PINT$Prasino3.y,'spec'='Prasino3')\n",
+    "Crypto1  <- data.frame('date'=PINT$Date, 'val'=PINT$Crypto1, '0-55m'=PINT$Crypto1.x, '55-100m'=PINT$Crypto1.y, 'spec'='Crypto1')\n",
+    "Hapto6   <- data.frame('date'=PINT$Date, 'val'=PINT$Hapto6,  '0-55m'=PINT$Hapto6.x,  '55-100m'=PINT$Hapto6.y,  'spec'='Hapto6')\n",
+    "Chloro1  <- data.frame('date'=PINT$Date, 'val'=PINT$Chloro1, '0-55m'=PINT$Chloro1.x, '55-100m'=PINT$Chloro1.y, 'spec'='Chloro1')\n",
+    "Cyano4   <- data.frame('date'=PINT$Date, 'val'=PINT$Cyano4,  '0-55m'=PINT$Cyano4.x,  '55-100m'=PINT$Cyano4.y,  'spec'='Cyano4')\n",
+    "Diatom1  <- data.frame('date'=PINT$Date, 'val'=PINT$Diatom1, '0-55m'=PINT$Diatom1.x, '55-100m'=PINT$Diatom1.y, 'spec'='Diatom1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,14 +866,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<table>\n",
-       "<thead><tr><th scope=col>Date</th><th scope=col>val</th><th scope=col>X0.55m</th><th scope=col>X55.100m</th><th scope=col>spec</th></tr></thead>\n",
+       "<thead><tr><th scope=col>date</th><th scope=col>val</th><th scope=col>X0.55m</th><th scope=col>X55.100m</th><th scope=col>spec</th></tr></thead>\n",
        "<tbody>\n",
        "\t<tr><td>1995-12-14</td><td> 13.54    </td><td> 11.34    </td><td>2.20      </td><td>Tchla     </td></tr>\n",
        "\t<tr><td>1996-01-13</td><td> 44.21    </td><td> 41.94    </td><td>2.27      </td><td>Tchla     </td></tr>\n",
@@ -885,7 +886,7 @@
       ],
       "text/latex": [
        "\\begin{tabular}{r|lllll}\n",
-       " Date & val & X0.55m & X55.100m & spec\\\\\n",
+       " date & val & X0.55m & X55.100m & spec\\\\\n",
        "\\hline\n",
        "\t 1995-12-14 &  13.54     &  11.34     & 2.20       & Tchla     \\\\\n",
        "\t 1996-01-13 &  44.21     &  41.94     & 2.27       & Tchla     \\\\\n",
@@ -897,7 +898,7 @@
       ],
       "text/markdown": [
        "\n",
-       "| Date | val | X0.55m | X55.100m | spec |\n",
+       "| date | val | X0.55m | X55.100m | spec |\n",
        "|---|---|---|---|---|\n",
        "| 1995-12-14 |  13.54     |  11.34     | 2.20       | Tchla      |\n",
        "| 1996-01-13 |  44.21     |  41.94     | 2.27       | Tchla      |\n",
@@ -908,7 +909,7 @@
        "\n"
       ],
       "text/plain": [
-       "  Date       val    X0.55m X55.100m spec \n",
+       "  date       val    X0.55m X55.100m spec \n",
        "1 1995-12-14  13.54  11.34 2.20     Tchla\n",
        "2 1996-01-13  44.21  41.94 2.27     Tchla\n",
        "3 1996-02-14  28.77  25.44 3.33     Tchla\n",
@@ -927,16 +928,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write.csv(PINTDF,\"ProcessedDATA/HPLCPinckneyTotAndSpec_01.csv\")"
+    "#PINTDF$date <- as.POSIXlt(PINTDF$Date)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PINTDF$yday <- yday(PINTDF$date)\n",
+    "\n",
+    "PINTDF$month <- month(PINTDF$date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write.csv(PINTDF,\"ProcessedDATA/HPLCPinckneyTotAndSpec_02.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,23 +973,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'zooplankton.netcdf'"
+      ],
+      "text/latex": [
+       "'zooplankton.netcdf'"
+      ],
+      "text/markdown": [
+       "'zooplankton.netcdf'"
+      ],
+      "text/plain": [
+       "[1] \"zooplankton.netcdf\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "'zooplankton.netcdf'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1163,11 +1203,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write.csv(ZOOdf,\"ProcessedDATA/ZooplanktonData_01.csv\")"
+    "ZOOdf$yday <- yday(ZOOdf$date)\n",
+    "\n",
+    "ZOOdf$month <- month(ZOOdf$date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write.csv(ZOOdf,\"ProcessedDATA/ZooplanktonData_02.csv\")"
    ]
   },
   {
