--- a/CaRiaco/SCRIPPS/CARIACO_data/PrelimDataExploration/reshapePhytoplankton.R.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/PrelimDataExploration/reshapePhytoplankton.R.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,84 @@
     "\n",
     "library(lubridate)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds2 <- read.csv(\"phytoplankton.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'data.frame':\t642834 obs. of  11 variables:\n",
+      " $ X        : int  1 2 3 4 5 6 7 8 9 10 ...\n",
+      " $ CruiseID : Factor w/ 170 levels \"93HG_001\",\"93HG_002\",..: 1 1 1 1 1 1 1 1 1 1 ...\n",
+      " $ lon      : num  -64.7 -64.7 -64.7 -64.7 -64.7 ...\n",
+      " $ lat      : num  10.5 10.5 10.5 10.5 10.5 10.5 10.5 10.5 10.5 10.5 ...\n",
+      " $ date     : Factor w/ 170 levels \"1995-11-08\",\"1995-12-13\",..: 1 1 1 1 1 1 1 1 1 1 ...\n",
+      " $ month    : int  11 11 11 11 11 11 11 11 11 11 ...\n",
+      " $ year     : int  1995 1995 1995 1995 1995 1995 1995 1995 1995 1995 ...\n",
+      " $ depth    : Factor w/ 9 levels \"1\",\"100\",\"15\",..: 1 7 3 4 5 6 8 2 9 1 ...\n",
+      " $ taxon    : Factor w/ 966 levels \"0\",\"Acanthoica_cuatrospina\",..: 22 22 22 22 22 22 22 22 22 33 ...\n",
+      " $ group    : Factor w/ 7 levels \"COCCOLITHOPHORIDS\",..: 3 3 3 3 3 3 3 3 3 3 ...\n",
+      " $ abundance: num  0 0 0 0 0 ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "str(ds2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phyto_dat <- ds2 %>%\n",
+    "  group_by(taxon) %>%\n",
+    "  summarise(taxon_group = taxon[1], group = group[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write.csv(phyto_dat, \"phyto_data_aggregate.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
