--- a/CaRiaco/SCRIPPS/CARIACO_data/PrelimDataExploration/PLOT_InSituVSClimateReanalysis.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/PrelimDataExploration/PLOT_InSituVSClimateReanalysis.ipynb
@@ -1421,6 +1421,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xr.read_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
    "outputs": [],
@@ -3089,6 +3105,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "xr.open_dataset('../VeryNEWESTCariacoData/niskin.netcdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -3534,7 +3566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
