August Work (Start)

--- a/CaRiaco/ForManuscriptNotebooks/MIXING/CreateMIXINGforcing_01.R.ipynb
+++ b/CaRiaco/ForManuscriptNotebooks/MIXING/CreateMIXINGforcing_01.R.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "packs <- c(\"tidyverse\",\"cowplot\",\"scales\",\"oce\")\n",
     "\n",
-    "# install.packages(packs)"
+    "install.packages(packs)"
    ]
   },
   {
@@ -66,7 +66,6 @@
     "require(tidyverse, warn.conflicts = FALSE)\n",
     "require(cowplot, warn.conflicts = FALSE)\n",
     "require(scales, warn.conflicts = FALSE)\n",
-    "\n",
     "require(oce, warn.conflicts = FALSE)"
    ]
   },
@@ -165,7 +164,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.1"
+   "version": "4.0.2"
   }
  },
  "nbformat": 4,
