--- a/CaRiaco/SCRIPPS/CARIACO_data/PrelimDataExploration/ClimateRemoldGrib2CSV.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/PrelimDataExploration/ClimateRemoldGrib2CSV.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# READING GRIBS AND OUTPUTTING CSV"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -181,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,56 +223,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 129,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "get_var() missing 1 required positional argument: 'var'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-129-6b0ebf190ce8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_var\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: get_var() missing 1 required positional argument: 'var'"
-     ]
-    }
-   ],
    "source": [
-    "get_var()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "retrieving 10m_v_component_of_neutral_wind\n",
-      "retrieving lake_mix_layer_depth\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'lmld'"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(get_var(analysis_variables_list[1]))\n",
-    "halo = get_var(analysis_variables_list[13])\n",
-    "\n",
-    "#halo.rename({\"lmld\":\"hello\"})\n",
-    "tuple(halo.data_vars)[0]"
+    "### create list from datasets:"
    ]
   },
   {
@@ -315,12 +276,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### merge datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
     "combined_wind = xr.combine_by_coords(wind_dat_list, compat='override')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### safe to csv"
    ]
   },
   {
@@ -331,434 +306,6 @@
    "source": [
     "combined_wind.to_array().to_pandas().to_csv(\"ERA5_combined_wind.csv\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Start Plotting All Data, with smoothing curve and statistics!\n",
-    "- both for annual, and full time series\n",
-    "- plot full wind_data\n",
-    "- choose the most interesting and create presentation for Ago & Esteban"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plt_envvar_seasonal(var_data):\n",
-    "    \n",
-    "    #plt.scatter(var_data.index.month, var_data.iloc[:,-1:], c=var_data.index.year)\n",
-    "\n",
-    "    plt.title(var_data.name + ' - seasonal', fontsize=30)\n",
-    "    \n",
-    "    month_group_list = [var_data.iloc[:,-1:].groupby(var_data.index.month).agg(list).values[i][0] for i in range(12)]\n",
-    "    plt.boxplot(month_group_list, showmeans=True)\n",
-    "    \n",
-    "    group_mean = var_data.iloc[:,-1:].groupby(var_data.index.month).mean()\n",
-    "    plt.plot(group_mean.index, group_mean.iloc[:,-1:], label='mean')\n",
-    "    group_median = var_data.iloc[:,-1:].groupby(var_data.index.month).median()\n",
-    "    plt.plot(group_median.index, group_median.iloc[:,-1:], label='median')\n",
-    "    \n",
-    "    plt.legend()\n",
-    "    #plt.colorbar()\n",
-    "    if np.mean(var_data.iloc[:,-1:]).values > 0:\n",
-    "        plt.ylim(bottom=0)\n",
-    "    else:\n",
-    "        plt.ylim(top=0)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import timedelta\n",
-    "delta = timedelta(days=365/2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wind_dat_list[2].resample('Y').last().index - delta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#mdates.date2num(wind_dat_list[2].index)\n",
-    "#wind_dat_list[2].iloc[:,-1:].values.flatten()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.dates as mdates\n",
-    "\n",
-    "fit = np.polyfit(mdates.date2num(wind_dat_list[2].index), wind_dat_list[2].iloc[:,-1:].values.flatten(), 1)\n",
-    "fit_fn = np.poly1d(fit)\n",
-    "\n",
-    "plt.plot(wind_dat_list[2].index, fit_fn(mdates.date2num(wind_dat_list[2].index)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import timedelta\n",
-    "delta = timedelta(days=365/2)\n",
-    "\n",
-    "import matplotlib.dates as mdates\n",
-    "\n",
-    "\n",
-    "\n",
-    "def plt_envvar_timeseries(var_data):\n",
-    "    \n",
-    "    # plot yearly mean\n",
-    "    yearly_mean = var_data.groupby(var_data.index.year).mean()\n",
-    "    plt.scatter(var_data.resample('Y').first().index-delta, yearly_mean.iloc[:,-1:], c='red', label='yearly mean')\n",
-    "    # plot yearly median\n",
-    "    yearly_mean = var_data.groupby(var_data.index.year).median()\n",
-    "    plt.scatter(var_data.resample('Y').first().index-delta, yearly_mean.iloc[:,-1:], c='blue', label='yearly median')\n",
-    "\n",
-    "    # plot linear reg\n",
-    "    fit = np.polyfit(mdates.date2num(var_data.index), var_data.iloc[:,-1:].values.flatten(), 1)\n",
-    "    fit_fn = np.poly1d(fit)\n",
-    "    \n",
-    "    plt.plot(var_data.index, fit_fn(mdates.date2num(var_data.index)), label='linear reg')\n",
-    "    \n",
-    "    #plot time series\n",
-    "    plt.plot(var_data.index, var_data.iloc[:,-1:], c='black')\n",
-    "    \n",
-    "    plt.title(var_data.name + ' - timeseries', fontsize=30)\n",
-    "    \n",
-    "    plt.legend()\n",
-    "    #plt.colorbar()\n",
-    "    if np.mean(var_data.iloc[:,-1:]).values > 0:\n",
-    "        plt.ylim(bottom=0)\n",
-    "    else:\n",
-    "        plt.ylim(top=0)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt_envvar_timeseries(wind_dat_list[2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for data in wind_dat_list:\n",
-    "    plt_envvar_timeseries(data)\n",
-    "    plt_envvar_seasonal(data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# GET In-Situ DATA\n",
-    "\n",
-    "so what do I want to plot?\n",
-    "\n",
-    "MLD vs Climate vars\n",
-    "21° Isocline vs Climate vars\n",
-    "Chlorophyll vs Climate vars"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# SO FIRST:\n",
-    "1. get MLD\n",
-    "2. get 21° Isocline\n",
-    "3. get Chlorophyll"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xr.read_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MLD2EuZ = pd.read_csv(\"MLD2EuZ_2.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MLD2EuZ.Date = pd.to_datetime(MLD2EuZ.Date)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MLD2EuZ"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MLDdat = MLD2EuZ.to_xarray()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(MLDdat.Date.dt.month, MLDdat.X21degC)\n",
-    "plt.ylim(bottom=0)\n",
-    "plt.title(\"21° isocline - seasonally\")\n",
-    "plt.ylabel(\"Depth [m]\")\n",
-    "plt.xlabel(\"Month\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(MLDdat.Date.dt.month, MLDdat.MLD2019)\n",
-    "plt.ylim(bottom=0)\n",
-    "plt.title(\"MLD - seasonally\")\n",
-    "plt.ylabel(\"Depth [m]\")\n",
-    "plt.xlabel(\"Month\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MLDdat.assign_coords(month=MLDdat.Date.dt.month)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#type(MLD2EuZ.to_xarray()),type(m10_wind_speed)\n",
-    "merged = xr.merge([MLD2EuZ.to_xarray(), m10_wind_speed])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged.Date, merged.time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MLDdat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#MLDdat.resample(Date='M')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#xr.merge([MLDdat, m10_wind_speed], compat='no_conflicts')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(MLD2EuZ.Date, MLD2EuZ.X21degC, label='21°')\n",
-    "\n",
-    "plt.plot(m10_wind_speed.time.values, m10_wind_speed.si10*10, label='10m wind speed')\n",
-    "plt.xlim(727693.65, 738333.35)\n",
-    "plt.legend()\n",
-    "\n",
-    "plt.title(\"21° Isocline vs 10m wind speed\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Nutrient Gradient -> Entrainment Flux, nutrient input over time\n",
-    "# upwelling velocity from wind curl\n",
-    "# proxy for upwelling from 21° isotherm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "INT_Chlorophyll = pd.read_csv(\"PINTDF_integratedChlorophyll.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "INT_Chlorophyll.Date = pd.to_datetime(INT_Chlorophyll.Date)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TotalChlaDat = INT_Chlorophyll[INT_Chlorophyll.spec=='Tchla']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(TotalChlaDat.Date, TotalChlaDat.val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xr.open_dataset('../VeryNEWESTCariacoData/niskin.netcdf')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import xarray as xr\n",
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phyto = xr.open_dataset('../VeryNEWESTCariacoData/phytoplankton_dtypes.netcdf')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phyto"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
